[tool.poetry]
name = "pylithiumsso3"
version = "0.1.1"
description = "Python 3 port of lithium_sso.php"
authors = ["Ron Zuckerman"]
readme = "README.md"
license = "LICENSE.txt"
homepage = "https://github.com/rzuckerm/pylithiumsso3"
classifiers = [
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rzuckerm/pylithiumsso3/issues"
"Documentation" = "https://rzuckerm.github.io/pylithiumsso3/"

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.3"
mypy = "^0.981"
black = "^22.8.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.message]
disable = ["too-many-arguments"]

[tool.pylint.basic]
good-names = ["iv"]
